add diagram analysis

--- a/Notebooks/Matplotlib.ipynb
+++ b/Notebooks/Matplotlib.ipynb
@@ -1106,6 +1106,66 @@
     "plt.legend(title=\"months\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76cb9b4f",
+   "metadata": {},
+   "source": [
+    "# From Histogram and Boxplots several key insights can be analyzed:\n",
+    "\n",
+    "`Histogram Analysis`:\n",
+    " - `Distribuition Shape`: It shows how data is distributed across different values, revealing if data is symetric, skewed (left or right) or has mutiple peaks. \n",
+    "\n",
+    " - `Central Tendency`: The peak of histogram indicates where most values are concentrated, helping to identify the mode.\n",
+    "\n",
+    " - `spread and variabiliy`: The width of histogram shows how spread out the data is -wider hisograms include higher variability. \n",
+    "\n",
+    " - `Outliners and Gaps`: unusual gaps or isolated bars may indicate outliners or missing Data. \n",
+    "\n",
+    " `BoxPlot Analysis`:\n",
+    " - `Five number summary`: Boxplot displays the minimum, first quartile(Q1), median(Q2),  3rd quartile(Q3), and maximum giving a quick summary of data central tendency.\n",
+    "\n",
+    " - `Inquartile Range (IQR)`: The box itself represents the middle 50% of the data (Q1 to Q3), showing the Data variablity. \n",
+    "\n",
+    " - `Outliners`: Points outside the whiskers are considered outliners, which can indicate unequal, the data is skewed (right or left).\n",
+    " \n",
+    " - `Skewness`: if median is not centered in the box or whiskers are unequal, the data is skewed. (right or left)\n",
+    "\n",
+    " - `comparison`: Boxplots are usually useful for compairing distribution across different groups or categories. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d9bae66",
+   "metadata": {},
+   "source": [
+    "# Common Diagram Types in Data Analysis\n",
+    "\n",
+    "There are several other types of diagrams commonly used for data analysis, each providing unique insights depending on the data and the question being asked.\n",
+    "\n",
+    "## Diagram Types and Their Uses\n",
+    "\n",
+    "| Diagram Type         | Description                                                                 | Best For                                      |\n",
+    "|----------------------|-----------------------------------------------------------------------------|-----------------------------------------------|\n",
+    "| Bar Plot             | Compares values between different categories or groups                      | Categorical data, comparing counts, averages  |\n",
+    "| Line Plot            | Shows trends or changes over time or ordered variables                      | Visualizing continuous data, time series      |\n",
+    "| Scatter Plot         | Displays the relationship between two numeric variables                     | Identifying correlations, clusters, outliers  |\n",
+    "| Pie Chart            | Illustrates proportions or percentages of different categories              | Showing how parts make up a whole             |\n",
+    "| Area Plot            | Similar to a line plot, but the area under the line is filled               | Emphasizing cumulative change, trends         |\n",
+    "| Stacked Bar/Area Plot| Compares multiple groups or categories, with each group stacked on another  | Showing both individual and total values      |\n",
+    "| Table Visualization  | Presents raw data or summary statistics in a tabular format                 | Detailed inspection, summary statistics       |\n",
+    "\n",
+    "## What Each Diagram Helps Analyze\n",
+    "\n",
+    "| Diagram Type         | Analysis Insights                                                                 |\n",
+    "|----------------------|-----------------------------------------------------------------------------------|\n",
+    "| Bar/Stacked Bar      | Compare categories, identify largest/smallest groups, see group contributions     |\n",
+    "| Line/Area            | Track trends, spot patterns, see how values change over time                      |\n",
+    "| Scatter              | Detect relationships, correlations, or clusters between two variables             |\n",
+    "| Pie                  | Understand relative size of categories within a whole                             |\n",
+    "| Table                | Examine detailed data, check for missing values, review summary statistics        |\n"
+   ]
   }
  ],
  "metadata": {
