--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -8,7 +8,70 @@
     "# Pandas LeetCode Study Plan Solutions\n",
     "\n",
     "This notebook contains solutions to the Pandas study plan problems from LeetCode.  \n",
-    "It serves as a portfolio of the answers I submitted on LeetCode.\n"
+    "It serves as a portfolio of the answers I submitted on LeetCode.\n",
+    "[LeetCode Pandas Study Plan](https://leetcode.com/studyplan/30-days-of-pandas/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39e5704d",
+   "metadata": {},
+   "source": [
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "432a932d",
+   "metadata": {},
+   "source": [
+    "# Question 1 : 595. Big Countries\n",
+    "Write a solution to find the name, population, and area of the big countries. Return the result table in any order.\n",
+    "\n",
+    "#### Combine conditions\n",
+    "- &   -> AND\n",
+    "- |   -> OR\n",
+    "\n",
+    "#### Filter rows\n",
+    "df.loc[condition, columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5085ac60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def big_countries(world: pd.DataFrame) -> pd.DataFrame:\n",
+    "    return world.loc[(world[\"area\"]>=3000000) | (world[\"population\"]>=25000000),[\"name\",\"population\",\"area\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87711cb0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Input:\n",
+    "\n",
+    "| name        | continent | area    | population | gdp          |\n",
+    "| ----------- | --------- | ------- | ---------- | ------------ |\n",
+    "| Afghanistan | Asia      | 652230  | 25500100   | 20343000000  |\n",
+    "| Albania     | Europe    | 28748   | 2831741    | 12960000000  |\n",
+    "| Algeria     | Africa    | 2381741 | 37100000   | 188681000000 |\n",
+    "| Andorra     | Europe    | 468     | 78115      | 3712000000   |\n",
+    "| Angola      | Africa    | 1246700 | 20609294   | 100990000000 |\n",
+    "\n",
+    "---\n",
+    "output:\n",
+    "\n",
+    "| name        | population | area    |\n",
+    "| ----------- | ---------- | ------- |\n",
+    "| Afghanistan | 25500100   | 652230  |\n",
+    "| Algeria     | 37100000   | 2381741 |"
    ]
   }
  ],
