added recyclable and low Fats products

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -73,6 +73,84 @@
     "| Afghanistan | 25500100   | 652230  |\n",
     "| Algeria     | 37100000   | 2381741 |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c555662a",
+   "metadata": {},
+   "source": [
+    "# Question 2. 1757. Recyclable and Low Fat Products\n",
+    "\n",
+    "Write a solution to find the ids of products that are both low fat and recyclable. Return the result table in any order.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82853527",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id\n",
+       "2         103"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    \"product_id\": [101, 102, 103, 104],\n",
+    "    \"low_fats\": [\"Y\", \"N\", \"Y\", \"N\"],\n",
+    "    \"recyclable\": [\"N\", \"Y\", \"Y\", \"N\"]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "products = pd.DataFrame(data)\n",
+    "\n",
+    "\n",
+    "def find_products(products: pd.DataFrame) -> pd.DataFrame:\n",
+    "    return products.loc[(products[\"low_fats\"]==\"Y\")&(products[\"recyclable\"]==\"Y\"),[\"product_id\"]]\n",
+    "\n",
+    "find_products(products)"
+   ]
   }
  ],
  "metadata": {
@@ -82,7 +160,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.0"
   }
  },
