added customers who never order

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -151,6 +151,94 @@
     "\n",
     "find_products(products)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d126f930",
+   "metadata": {},
+   "source": [
+    "# Question 3. 183. Customers Who Never Order\n",
+    "Write a solution to find all customers who never order anything. Return the result table in any order.\n",
+    "\n",
+    "----\n",
+    "used left joins because it Keeps all rows from the left table (customers), and matches from right table (orders) if exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cfd14f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Henry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Max</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  customers\n",
+       "1     Henry\n",
+       "3       Max"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Customers table\n",
+    "customers = pd.DataFrame({\n",
+    "    \"id\": [1, 2, 3, 4],\n",
+    "    \"name\": [\"Joe\", \"Henry\", \"Sam\", \"Max\"]\n",
+    "})\n",
+    "\n",
+    "# Orders table\n",
+    "orders = pd.DataFrame({\n",
+    "    \"id\": [1, 2],\n",
+    "    \"customerId\": [3, 1]\n",
+    "})\n",
+    "\n",
+    "def find_customers(customers: pd.DataFrame, orders: pd.DataFrame) -> pd.DataFrame:\n",
+    "     merged_id = pd.merge(customers, orders, left_on=\"id\", right_on=\"customerId\", how=\"left\")\n",
+    "     return merged_id.loc[merged_id[\"customerId\"].isna(),[\"name\"]].rename(columns={\"name\":\"customers\"})\n",
+    "    \n",
+    "find_customers(customers, orders)\n"
+   ]
   }
  ],
  "metadata": {
