--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -304,6 +304,28 @@
     "# This improved little bit runtime in leetcode  \n",
     "# ~ : Is this customer’s ID in the orders list?”"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be3bdde3",
+   "metadata": {},
+   "source": [
+    "# Question 4. 1148. Article Views I\n",
+    "Write a solution to find all the authors that viewed at least one of their own articles. Return the result table sorted by id in ascending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d42fcf9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def article_views(views: pd.DataFrame)->pd.DataFrame:\n",
+    "    viewed_article=views[(views[\"author_id\"]==views[\"viewer_id\"])]\n",
+    "    viewed_article=viewed_article[[\"author_id\"]].drop_duplicates()\n",
+    "    return viewed_article.rename(columns={\"author_id\":\"id\"}).sort_values(by=\"id\")"
+   ]
   }
  ],
  "metadata": {
