done invalid tweets

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -326,6 +326,29 @@
     "    viewed_article=viewed_article[[\"author_id\"]].drop_duplicates()\n",
     "    return viewed_article.rename(columns={\"author_id\":\"id\"}).sort_values(by=\"id\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d686dde",
+   "metadata": {},
+   "source": [
+    "# Question 5. 1683 Invalid Tweets \n",
+    "Write a solution to find the IDs of the invalid tweets. The tweet is invalid if the number of characters used in the content of the tweet is strictly greater than 15. Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ab31e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def invalid_tweets(tweets: pd.DataFrame) -> pd.DataFrame:\n",
+    "    invalid=tweets[tweets[\"content\"].str.len()>15]\n",
+    "    return invalid[[\"tweet_id\"]]"
+   ]
   }
  ],
  "metadata": {
