added calculate special bonus

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -349,6 +349,32 @@
     "    invalid=tweets[tweets[\"content\"].str.len()>15]\n",
     "    return invalid[[\"tweet_id\"]]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "997fa3c2",
+   "metadata": {},
+   "source": [
+    "# Question 6. 1873. Calculate Special Bonus\n",
+    "\n",
+    "Write a solution to calculate the bonus of each employee. The bonus of an employee is 100% of their salary if the ID of the employee is an odd number and the employee's name does not start with the character 'M'. The bonus of an employee is 0 otherwise. Return the result table ordered by employee_id."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca651707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def calculate_special_bonus(employees: pd.DataFrame) -> pd.DataFrame:\n",
+    "    employees[\"bonus\"]=employees[(employees[\"employee_id\"]%2==1)&(~employees[\"name\"].str.startswith(\"M\"))][\"salary\"]\n",
+    "    employees[\"bonus\"]=employees[\"bonus\"].fillna(0)\n",
+    "\n",
+    "    return employees[[\"employee_id\",\"bonus\"]].sort_values(by=\"employee_id\")"
+   ]
   }
  ],
  "metadata": {
