added fix names in tables

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -375,6 +375,47 @@
     "\n",
     "    return employees[[\"employee_id\",\"bonus\"]].sort_values(by=\"employee_id\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d517cc4",
+   "metadata": {},
+   "source": [
+    "# Question 7. 1667. Fix Names in a Table\n",
+    "Write a solution to fix the names so that only the first character is uppercase and the rest are lowercase.Return the result table ordered by `user_id.`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f781414f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "def fix_names(users: pd.DataFrame) -> pd.DataFrame:\n",
+    "    users.name=users.name.str.capitalize()\n",
+    "    return users.sort_values(by=\"user_id\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2dbdd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another solution: Better in performance wise\n",
+    "import pandas as pd\n",
+    "\n",
+    "def fix_names(users: pd.DataFrame) -> pd.DataFrame:\n",
+    "    users=users.copy()\n",
+    "    users[\"name\"] = users[\"name\"].str.capitalize()\n",
+    "    users.sort_values(\"user_id\", inplace=True)\n",
+    "    users.reset_index(drop=True, inplace=True)\n",
+    "    return users\n"
+   ]
   }
  ],
  "metadata": {
