--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -416,6 +416,42 @@
     "    users.reset_index(drop=True, inplace=True)\n",
     "    return users\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21390997",
+   "metadata": {},
+   "source": [
+    "# Question 8. 1517. Find Users With Valid E-Mails\n",
+    "Write a solution to find the users who have valid emails.A valid e-mail has a prefix name and a domain where:\n",
+    "The prefix name is a string that may contain letters (upper or lower case), digits, underscore '_', period '.', and/or dash '-'. The prefix name must start with a letter.\n",
+    "The domain is '@leetcode.com'. Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c78b6dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def valid_emails(users: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df=users[users[\"mail\"].str.match(r'^[A-Za-z][A-Za-z0-9_.-]*@leetcode\\.com$')]\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e11ad2d2",
+   "metadata": {},
+   "source": [
+    "- `str` → Pandas string methods\n",
+    "- `match()` → checks if the string matches the regex from the beginning\n",
+    "- `r''` → raw string for regex\n",
+    "- Regex validates the email format"
+   ]
   }
  ],
  "metadata": {
