patients with conditions

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -452,6 +452,37 @@
     "- `r''` → raw string for regex\n",
     "- Regex validates the email format"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fe2c465",
+   "metadata": {},
+   "source": [
+    "# Question 9. 1527. Patients With a Condition\n",
+    "Write a solution to find the patient_id, patient_name, and conditions of the patients who have Type I Diabetes. Type I Diabetes always starts with DIAB1 prefix. Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5a2dd31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def find_patients(patients: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df=patients[patients[\"conditions\"].str.contains(r\"^DIAB1| DIAB1\")]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20f4684d",
+   "metadata": {},
+   "source": [
+    "r\"^(PREFIX)|(SPACE)(PREFIX)\"\n"
+   ]
   }
  ],
  "metadata": {
