nth highest salary

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -483,6 +483,32 @@
    "source": [
     "r\"^(PREFIX)|(SPACE)(PREFIX)\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c67933d",
+   "metadata": {},
+   "source": [
+    "# Question 10. 177. Nth Highest Salary\n",
+    "Write a solution to find the nth highest distinct salary from the Employee table. If there are less than n distinct salaries, return null."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "587e87e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def nth_highest_salary(employee: pd.DataFrame, N: int) -> pd.DataFrame:\n",
+    "    sorted_salaries=employee[\"salary\"].sort_values(ascending=False).drop_duplicates()\n",
+    "    if N>len(sorted_salaries) or N<=0:\n",
+    "        return pd.DataFrame({f\"getNthHighestSalary({N})\":[None]})\n",
+    "    nth_highest=sorted_salaries.iloc[N-1]\n",
+    "    return pd.DataFrame({f\"getNthHighestSalary({N})\":[nth_highest]})"
+   ]
   }
  ],
  "metadata": {
