second highest salary

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -509,6 +509,47 @@
     "    nth_highest=sorted_salaries.iloc[N-1]\n",
     "    return pd.DataFrame({f\"getNthHighestSalary({N})\":[nth_highest]})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab0becef",
+   "metadata": {},
+   "source": [
+    "# Question 11 . 176. Second Highest Salary\n",
+    "Write a solution to find the second highest distinct salary from the Employee table. If there is no second highest salary, return null (return None in Pandas)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b233c9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def second_highest_salary(employee: pd.DataFrame) -> pd.DataFrame:\n",
+    "    unique_salaries=employee[\"salary\"].drop_duplicates()\n",
+    "\n",
+    "    unique_salaries=unique_salaries.sort_values(ascending=False)\n",
+    "\n",
+    "    if len(unique_salaries)<2:\n",
+    "        return pd.DataFrame({\"SecondHighestSalary\":[None]})\n",
+    "\n",
+    "    second=unique_salaries.iloc[1]\n",
+    "    return pd.DataFrame({\"SecondHighestSalary\":[second]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7f5db39",
+   "metadata": {},
+   "source": [
+    "### Input → Output Flow\n",
+    "\n",
+    "- DataFrame → Series → Series → Series → scalar → DataFrame\n",
+    "- employee  salary   unique   sorted    iloc[1]  result"
+   ]
   }
  ],
  "metadata": {
