add department high salary

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -550,6 +550,34 @@
     "- DataFrame → Series → Series → Series → scalar → DataFrame\n",
     "- employee  salary   unique   sorted    iloc[1]  result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84e10370",
+   "metadata": {},
+   "source": [
+    "# Question 12. 184. Department Highest Salary\n",
+    "Write a solution to find employees who have the highest salary in each of the departments.Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "508228de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def department_highest_salary(employee: pd.DataFrame, department: pd.DataFrame) -> pd.DataFrame:\n",
+    "    merged=pd.merge(employee,department, left_on=\"departmentId\",right_on=\"id\", suffixes=(\"_emp\",\"_dep\"))\n",
+    "    merged=merged.rename(columns={\"name_emp\":\"Employee\",\"name_dep\":\"Department\",\"salary\":\"Salary\"})\n",
+    "    max_salary=merged.groupby(\"Department\")[\"Salary\"].max().reset_index()\n",
+    "\n",
+    "    result=pd.merge(merged,max_salary,on=[\"Department\",\"Salary\"])\n",
+    "    result=result[[\"Department\",\"Employee\",\"Salary\"]]\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
