added rank scores leetcode problem 178

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -578,6 +578,33 @@
     "    result=result[[\"Department\",\"Employee\",\"Salary\"]]\n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc880581",
+   "metadata": {},
+   "source": [
+    "# Question 13.  178. Rank Scores\n",
+    "Write a solution to find the rank of the scores. The ranking should be calculated according to the following rules:\n",
+    "- The scores should be ranked from the highest to the lowest.\n",
+    "- If there is a tie between two scores, both should have the same ranking.\n",
+    "- After a tie, the next ranking number should be the next consecutive integer value. In other words, there should be no holes between ranks.\n",
+    "- Return the result table ordered by score in descending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f711229",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def order_scores(scores: pd.DataFrame) -> pd.DataFrame:\n",
+    "    scores[\"rank\"]=scores[\"score\"].rank(method=\"dense\",ascending=False)\n",
+    "    return scores.drop(\"id\",axis=1).sort_values(by=\"score\",ascending=False)"
+   ]
   }
  ],
  "metadata": {
