--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -605,6 +605,28 @@
     "    scores[\"rank\"]=scores[\"score\"].rank(method=\"dense\",ascending=False)\n",
     "    return scores.drop(\"id\",axis=1).sort_values(by=\"score\",ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2378a878",
+   "metadata": {},
+   "source": [
+    "# Question 14. 196. Delete Duplicate Emails\n",
+    "Write a solution to delete all duplicate emails, keeping only one unique email with the smallest id. For Pandas users, please note that you are supposed to modify Person in place.After running your script, the answer shown is the Person table. The driver will first compile and run your piece of code and then show the Person table. The final order of the Person table does not matter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "313baaaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "def delete_duplicate_emails(person: pd.DataFrame) -> None:\n",
+    "    person.sort_values(\"id\",inplace=True)\n",
+    "    person.drop_duplicates(subset=\"email\",keep=\"first\",inplace=True)"
+   ]
   }
  ],
  "metadata": {
