added rearrange products tabe

--- a/30days_pandas_leetcode/Leetcode.ipynb
+++ b/30days_pandas_leetcode/Leetcode.ipynb
@@ -627,6 +627,50 @@
     "    person.sort_values(\"id\",inplace=True)\n",
     "    person.drop_duplicates(subset=\"email\",keep=\"first\",inplace=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9cfc02f",
+   "metadata": {},
+   "source": [
+    "# Question 15. 1795. Rearrange Products Table\n",
+    "Write a solution to rearrange the Products table so that each row has (product_id, store, price). If a product is not available in a store, do not include a row with that product_id and store combination in the result table.Return the result table in any order.\n",
+    "\n",
+    "--- \n",
+    "## Solution\n",
+    "melt is used to turn wide tables into long tables so they are easier to analyze, visualize, or feed into models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adfaa522",
+   "metadata": {},
+   "source": [
+    "`DataFrame.melt(\n",
+    "    id_vars=None,\n",
+    "    value_vars=None,\n",
+    "    var_name=None,\n",
+    "    value_name=\"value\",\n",
+    "    col_level=None,\n",
+    "    ignore_index=True,\n",
+    ")\n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915e614f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def rearrange_products_table(products: pd.DataFrame) -> pd.DataFrame:\n",
+    "    melted=products.melt(id_vars=\"product_id\", value_vars=[\"store1\",\"store2\",\"store3\"],var_name=\"store\",value_name=\"price\")\n",
+    "    melted=melted.dropna(subset=[\"price\"])\n",
+    "    return melted"
+   ]
   }
  ],
  "metadata": {
